--- a/client/src/components/MainMenu.css
+++ b/client/src/components/MainMenu.css
@@ -1,11 +1,23 @@
 .main-menu {
   text-align: center;
   padding: 20px;
+  background: 
+    linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), 
+    url('../assets/background-image.png');background-size: cover; 
+  background-position: center; 
+  background-attachment: fixed;
+  min-height: 100vh;
+  padding-bottom: 20px;
+  box-sizing: border-box;
 }
 
 .main-menu .pokedex-image {
-  width: 200px; /* Adjust the size as needed */
+  width: 100%;
+  max-width: 600px;
+  height: auto;
+  position: sticky;
   margin-bottom: 20px;
+  border-radius: 15px;
 }
 
 .main-menu .search-form {
