--- a/client/src/components/MainMenu.css
+++ b/client/src/components/MainMenu.css
@@ -1,9 +1,11 @@
+/* Main container for the main menu */
 .main-menu {
   text-align: center;
   padding: 20px;
   background: 
     linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), 
-    url('../assets/background-image.png');background-size: cover; 
+    url('../assets/background-image.png'); /* Background image with gradient overlay */
+  background-size: cover; 
   background-position: center; 
   background-attachment: fixed;
   min-height: 100vh;
@@ -11,6 +13,7 @@
   box-sizing: border-box;
 }
 
+/* Pokedex image styling */
 .main-menu .pokedex-image {
   width: 100%;
   max-width: 600px;
@@ -20,20 +23,24 @@
   border-radius: 15px;
 }
 
+/* Search form styling */
 .main-menu .search-form {
   margin-bottom: 20px;
   position: relative; /* To position the suggestions */
 }
 
+/* Search input styling */
 .main-menu .search-form input {
   padding: 10px;
   width: 200px;
 }
 
+/* Search button styling */
 .main-menu .search-form button {
   padding: 10px;
 }
 
+/* Suggestions dropdown styling */
 .main-menu .search-suggestions {
   position: absolute;
   background-color: white;
@@ -49,28 +56,33 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
+/* Individual suggestion styling */
 .main-menu .search-suggestion {
   padding: 10px;
   cursor: pointer;
   text-align: left;
 }
 
+/* Suggestion hover effect */
 .main-menu .search-suggestion:hover {
   background-color: #f0f0f0;
 }
 
+/* Content container styling */
 .main-menu .content {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
+/* Tabs container styling */
 .main-menu .tabs {
   display: flex;
   justify-content: center;
   margin-bottom: 20px;
 }
 
+/* Individual tab styling */
 .main-menu .tab {
   padding: 10px 20px;
   cursor: pointer;
@@ -79,10 +91,12 @@
   margin: 0 10px;
 }
 
+/* Active tab styling */
 .main-menu .tab.active {
   background-color: #ccc;
 }
 
+/* Category buttons container styling */
 .main-menu .category-buttons {
   display: flex;
   flex-wrap: wrap;
@@ -90,6 +104,7 @@
   gap: 10px;
 }
 
+/* Individual category button styling */
 .main-menu .category-button {
   background-color: blue;
   color: white;
@@ -100,10 +115,12 @@
   white-space: nowrap; /* Prevents the button from stretching */
 }
 
+/* Active and hover effect for category buttons */
 .main-menu .category-button.active, .main-menu .category-button:hover {
   background-color: darkblue;
 }
 
+/* List container styling for Pokémon and items */
 .main-menu .pokemon-list,
 .main-menu .item-list {
   display: flex;
@@ -111,6 +128,7 @@
   justify-content: center;
 }
 
+/* Card styling for Pokémon and items */
 .main-menu .pokemon-card,
 .main-menu .item-card {
   position: relative;
@@ -128,6 +146,7 @@
   z-index: 1;
 }
 
+/* Image styling for Pokémon and items */
 .main-menu .pokemon-card img,
 .main-menu .item-card img {
   width: 100px;
@@ -135,11 +154,13 @@
   margin-bottom: 1px; /* Adjusted margin to bring image closer to the name */
 }
 
+/* Name styling for Pokémon and items */
 .main-menu .pokemon-card p,
 .main-menu .item-card p {
   margin: 0;
 }
 
+/* ID styling for Pokémon and items */
 .main-menu .pokemon-id,
 .main-menu .item-id {
   position: absolute;
@@ -152,6 +173,7 @@
   color: #333;
 }
 
+/* Favorite button styling */
 .main-menu .favorite-button {
   position: absolute;
   top: -8px; /* Adjust this value to move higher */
@@ -162,6 +184,7 @@
   font-size: 1.2em;
 }
 
+/* Name styling for Pokémon and items */
 .main-menu .pokemon-name,
 .main-menu .item-name {
   background-color: #eee;
@@ -172,6 +195,7 @@
   color: #333;
 }
 
+/* Container for Pokémon types */
 .main-menu .pokemon-types {
   display: none;
   flex-direction: column;
@@ -181,6 +205,7 @@
   transform: translateY(-50%);
 }
 
+/* Styling for individual types */
 .main-menu .pokemon-type {
   padding: 2px 8px;
   border-radius: 20px;
@@ -190,19 +215,23 @@
   background-color: rgba(0, 0, 0, 0.5);
 }
 
+/* Hover effect for Pokémon cards */
 .main-menu .pokemon-card:hover {
   background-color: rgba(0, 0, 0, 0.1);
   opacity: 0.8;
 }
 
+/* Display types on hover */
 .main-menu .pokemon-card:hover .pokemon-types {
   display: flex;
 }
 
+/* General button styling */
 .main-menu button {
   margin-top: 10px;
 }
 
+/* Toggle button styling */
 .main-menu .toggle-button {
   background-color: green;
   color: white;
@@ -212,10 +241,12 @@
   border-radius: 5px;
 }
 
+/* Hover effect for toggle button */
 .main-menu .toggle-button:hover {
   background-color: darkgreen;
 }
 
+/* Background styling for different Pokémon types */
 .main-menu .normal { background: linear-gradient(to bottom right, #A4A4A4, #a4a4a463); }
 .main-menu .fire { background: linear-gradient(to bottom right, #FFA07A, #ff634773); }
 .main-menu .fighting { background: linear-gradient(to bottom right, #C66F39, #c66f3975); }
