--- a/client/src/components/PokemonDetail.css
+++ b/client/src/components/PokemonDetail.css
@@ -140,6 +140,9 @@
   flex: 2;
   font-size: 1.2em;
   font-weight: bold;
+  background-color: rgba(240, 240, 240, 0.8);
+  border-radius: 10px;
+  padding: 5px 10px;
 }
 
 .pokemon-stats {
