--- a/client/src/components/PokemonDetail.css
+++ b/client/src/components/PokemonDetail.css
@@ -24,7 +24,7 @@
   position: absolute;
   top: 10px;
   left: 10px;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(82, 81, 81, 0.932);
   border-radius: 5px;
   padding: 2px 5px;
   font-size: 0.8em;
@@ -42,7 +42,7 @@
 }
 
 .detail-card .pokemon-name {
-  background-color: #eee;
+  background-color: #504f4f;
   border-radius: 20px;
   padding: 5px 10px;
   margin-top: -10px;
@@ -140,9 +140,9 @@
   flex: 2;
   font-size: 1.2em;
   font-weight: bold;
-  background-color: rgba(240, 240, 240, 0.8);
+  background-color: rgba(77, 77, 77, 0.945);
   border-radius: 10px;
-  padding: 1px 3px;
+  padding: 1px 1px;
 }
 
 .pokemon-stats {
@@ -165,6 +165,9 @@
   font-weight: bold;
   text-align: right;
   width: 50px;
+  background-color: rgba(77, 77, 77, 0.945);
+  border-radius: 10px;
+  padding: 1px 1px;
 }
 
 .stat-bar {
