--- a/client/src/components/PokemonDetail.css
+++ b/client/src/components/PokemonDetail.css
@@ -168,6 +168,8 @@
   background-color: rgba(77, 77, 77, 0.945);
   border-radius: 10px;
   padding: 1px 1px;
+  display: inline-block;
+  width: auto;
 }
 
 .stat-bar {
