Detailed view update

--- a/client/src/components/PokemonDetail.css
+++ b/client/src/components/PokemonDetail.css
@@ -169,9 +169,7 @@
   border-radius: 10px;
   padding: 1px 1px;
   flex-shrink: 0;
-  margin-right: 5px;
-  display: inline-block;
-  /* width: auto; */
+  width: auto;
 }
 
 .stat-bar {
