--- a/client/src/components/PokemonDetail.css
+++ b/client/src/components/PokemonDetail.css
@@ -168,8 +168,7 @@
   background-color: rgba(77, 77, 77, 0.945);
   border-radius: 10px;
   padding: 1px 1px;
-  flex-shrink: 0;
-  overflow: hidden;
+  display: inline-block;
 }
 
 .stat-bar {
