--- a/client/src/components/PokemonDetail.css
+++ b/client/src/components/PokemonDetail.css
@@ -163,12 +163,11 @@
 
 .stat-name {
   font-weight: bold;
-  text-align: right;
+  text-align: center;
   width: 50px;
   background-color: rgba(77, 77, 77, 0.945);
   border-radius: 10px;
   padding: 1px 1px;
-  display: inline-block;
 }
 
 .stat-bar {
