--- a/client/src/components/PokemonDetail.css
+++ b/client/src/components/PokemonDetail.css
@@ -165,7 +165,7 @@
   font-weight: bold;
   text-align: center;
   width: 50px;
-  background-color: rgba(77, 77, 77, 0.945);
+  background-color: #f5f5f5;
   border-radius: 10px;
   padding: 1px 1px;
 }
